# scfm-benchscope

./: .dockerignore  .gitignore  Dockerfile  README.md  pixi.toml  pyproject.toml  setup_path.py
__try_things/: check_embeddings_size.ipynb  geneformer_extract_embeddings_nmi.ipynb  metrics_.py
_explore/: CART_predict.ipynb  CAR_T.ipynb  baseline_pca_response_model_PRODUCT1.ipynb  crc.ipynb
analyze_classification/: Fig3_a.ipynb  Table_8.ipynb  analysis_utils.py  collect_classification_metrics.ipynb  inspect_results.ipynb
analyze_embedding/: Fig2_calc_metrics.ipynb  analysis_utils.py  calc_metrics.py  combine_results.ipynb  dot_plot.ipynb
dashboard/: agent.py  classification.html  embeddings.html  index.html  models.html  models.json  template.html
data/: data_loader.py  gf_loader.py
evaluation/: eval.py
features/: cellplm_extractor.py  extractor.py  gf_extractor.py  mock_extractor.py  nicheformer_extractor.py  scconcept_extractor.py  scf_extractor.py  scgpt_extractor.py  scimilarity_extractor.py  scvi_extractor.py  state_extractor.py
models/: classify.py  gf_finetune.py  mil_experiment.py  mock_embedding_model.py
run/: Untitled  eval_all.sh  eval_cellplm.sh  eval_geneformer_V1-10M-i2048.sh  eval_geneformer_V1-10M-i2048_finetune.sh  eval_geneformer_V2-104M-i4096.sh  eval_geneformer_V2-104M-i4096_finetune.sh  eval_geneformer_V2-104M_CLcancer-i4096.sh  eval_geneformer_V2-316M-i4096.sh  eval_hvg.sh  eval_nicheformer.sh  eval_pca.sh  eval_pca50.sh  eval_scconcept.sh  eval_scfoundation.sh  eval_scgpt_cancer.sh  eval_scgpt_human.sh  eval_scimilarity.sh  run.sh  (+8 more)
(+611 files in other folders)
