[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scfm-cancer-eval"
version = "0.1.0"
description = "Single-cell foundation model evaluation harness (scFM_eval)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "scFM_eval contributors" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2",
  "pyyaml>=6",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "tqdm",
  "einops",
  "anndata>=0.10",
  "scanpy>=1.9",
  "h5py",
  "torch>=2.1",
  "huggingface_hub>=0.20",
  "scib",
  "scib-metrics>=0.5",
]

[project.scripts]
scfm-cancer-eval = "scfm_cancer_eval.run.run_exp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scfm_cancer_eval = ["yaml/**/*.yaml"]
